# scrabble

./: .gitignore  Cargo.toml
client/: game.html  index.html  lobby.js  registration.js  script.js
client/assets/css/: lobby.css
client/assets/js/game/: registration.js  script.js
docs/: sequence.mmd
server/: Cargo.toml
server/src/: events.rs  game.rs  lobby.rs  main.rs  manager.rs  player.rs  response.rs  scrabble.rs
src/: game.rs  main.rs  player.rs
