[package]
name = "scrabble"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
socketioxide = { version = "0.15.0", features = ["extensions"]}
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
http = "1.1.0"
http-body-util = "0.1.2"
axum = "0.7.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.213", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"]}
log = "0.4.22"
